# reasoning-trace

./: .gitignore  README.md  pyproject.toml
python/: reasoning_trace.html  trace.py
typescript/src/: trace.ts
